# Term

./: pyproject.toml  setup.py
docs-src/source/: conf.py
term/: __init__.py  atom.py  bases.py  bitstring.py  codec.py  erl_typing.py  fun.py  list.py  pid.py  py_codec_impl.py  reference.py  util.py
test/: test_etf_decode.py  test_etf_encode.py  test_rust_extension.py
